[package]
name = "eui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
bevy_reflect = "0.12.1"
eui_derive = { path = "eui_derive" }
log = "0.4.20"
serde = "*"
serde_derive = "*"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["sync"] }
tower-http = { version = "0.5.0", features = ["fs"] }

# serde_json = "*"
# wasm-bindgen = "0.2"