[package]
name = "eui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
eui_derive = { path = "eui_derive" }
log = "0.4"
serde = "*"
serde_derive = "*"
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
env_logger = "*"