[package]
name = "eui"
version = "0.1.0"
edition = "2021"

[dependencies]
eui_derive = { path = "eui_derive" }
serde = { version = "1", features = ["derive"] }
log = "0.4"

axum =       { version = "0.7", optional = true }
serde_json = { version = "1", optional = true }
tokio =      { version = "1", optional = true, features = ["sync"] }
tower-http = { version = "0.5", optional = true, features = ["fs"] }

[dev-dependencies]
env_logger = "*"

[features]
default = ["full"]
full = ["axum", "serde_json", "tokio", "tower-http"]
